--- a/HealthAndWellBeing.html
+++ b/HealthAndWellBeing.html
@@ -27,12 +27,6 @@
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-    Theme Name: BizPage
-    Theme URL: https://bootstrapmade.com/bizpage-bootstrap-business-template/
-    Author: BootstrapMade.com
-    License: https://bootstrapmade.com/license/
-  ======================================================= -->
 </head>
 
 <body>
@@ -120,8 +114,21 @@
             <div class="icon"><i class="ion-ios-paper-outline"></i></div>
             <h4 class="title"><a href="">Hunger Resource</a></h4>
           </div>
-      
         </div>
+		
+		<div class="img">
+            <img src="img/herohealthservices.jpg" alt="" class="img-fluid">
+          </div>
+
+          <section id="call-to-action" class="wow fadeIn">
+            <div class="container text-center">
+              <h3><center>Contact</center></h3>
+              <font color="white">
+                NVFS Headquarters<br><br>
+                info@nvfs.org<br><br>571.748.2500
+              </font>
+            </div>
+          </section>
 
       </div>
     </section><!-- #services -->
@@ -131,22 +138,7 @@
   </main>
 
 
-     <footer id="footer">
-
-    <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong>BizPage</strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        <!--
-          All the links in the footer should remain intact.
-          You can delete the links only if you purchased the pro version.
-          Licensing information: https://bootstrapmade.com/license/
-          Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=BizPage
-        -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
-    </div>
+    
   </footer><!-- #footer -->
 
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
