--- a/HealthAndWellBeing.html
+++ b/HealthAndWellBeing.html
@@ -99,7 +99,7 @@
 			<p>Proper nutrition education informs health decisions as well, and helps families make good choices about what they eat. By focusing on how food affects their bodies, family members can maintain better health overall and decrease the impacts of poor nutrition on their bodies. We also ensure that local families have access to food essentials to provide the nourishment they need each and every day.
 		  </p>
         
-
+		<h2>Our Services</h2>
         <div class="row">
 
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
