--- a/HealthAndWellBeing.html
+++ b/HealthAndWellBeing.html
@@ -104,15 +104,15 @@
 
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
             <div class="icon"><i class="ion-ios-analytics-outline"></i></div>
-            <h4 class="title"><a href="">Health Access</a></h4>
+            <h4 class="title"><a href="healthaccess.html">Health Access</a></h4>
           </div>
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
             <div class="icon"><i class="ion-ios-bookmarks-outline"></i></div>
-            <h4 class="title"><a href="">Dental Access</a></h4>
+            <h4 class="title"><a href="dentalaccess.html">Dental Access</a></h4>
           </div>
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
             <div class="icon"><i class="ion-ios-paper-outline"></i></div>
-            <h4 class="title"><a href="">Hunger Resource</a></h4>
+            <h4 class="title"><a href="hungerresource.html">Hunger Resource Center</a></h4>
           </div>
         </div>
 		
