--- a/dentalaccess.html
+++ b/dentalaccess.html
@@ -123,7 +123,7 @@
             <div class="container text-center">
              <h3><center>Contact</center></h3>
               <font color="white">
-                Loudoun County residents:<br>
+                <strong>Loudoun County residents:</strong><br>
 				NVFS does not provide dental access services in Loudoun County. Please call the county intake line at
 				<br>
 				703.771.5851
