--- a/youth_initiatives.html
+++ b/youth_initiatives.html
@@ -100,7 +100,7 @@
           <h4><center>Helping teenagers build healthy, successful futures</center></h4>
           <p>NVFS’ Youth Initiatives programs provide teenagers and young adults with the skills and resources needed to build healthier well-being – at school, at home and within their communities. This includes connections to healthy activities as well as the skills to build and maintain healthy relationships with friends and family. Providing our youth with these tools helps them build brighter futures not only for themselves, but for their community as well.</p>
 <div class="img">
-            <img src="youth.jpg" alt="" class="img-fluid">
+            <img src="img/youth.jpg" alt="" class="img-fluid">
           </div>
 
           </br></br> <h4><center>Our Programs</center></h4>
@@ -121,7 +121,23 @@
   </main>
 
 
-    
+    <footer id="footer">
+
+    <div class="container">
+      <div class="copyright">
+        &copy; Copyright <strong>BizPage</strong>. All Rights Reserved
+      </div>
+      <div class="credits">
+        <!--
+          All the links in the footer should remain intact.
+          You can delete the links only if you purchased the pro version.
+          Licensing information: https://bootstrapmade.com/license/
+          Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=BizPage
+        -->
+        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+      </div>
+    </div>
+  </footer><!-- #footer -->
 
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
   <!-- Uncomment below i you want to use a preloader -->
