--- a/foster_care.html
+++ b/foster_care.html
@@ -101,7 +101,7 @@
           <p>NVFS Foster Care provides foster families in Northern Virginia and surrounding areas with the tools and support to build healthy, caring and therapeutic relationships with children placed in foster care. NVFS also helps foster parents bridge the gap between the child and his or her biological parents. As a result, these strong support networks help ensure that foster children are able to thrive in a safe and stable home environment while focusing on permanency.
 NVFS provides both therapeutic foster care and respite care programs.</p>
 <div class="img">
-            <img src="fostercare.jpg" alt="" class="img-fluid">
+            <img src="ing/fostercare.jpg" alt="" class="img-fluid">
           </div>
 
           </br></br> <h4><center>Interested in Becoming a Foster Parent?</center></h4>
@@ -119,7 +119,23 @@ NVFS foster and respite parent(s) must be over 21, financially and emotionally s
   </main>
 
 
-    
+    <footer id="footer">
+
+    <div class="container">
+      <div class="copyright">
+        &copy; Copyright <strong>BizPage</strong>. All Rights Reserved
+      </div>
+      <div class="credits">
+        <!--
+          All the links in the footer should remain intact.
+          You can delete the links only if you purchased the pro version.
+          Licensing information: https://bootstrapmade.com/license/
+          Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=BizPage
+        -->
+        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+      </div>
+    </div>
+  </footer><!-- #footer -->
 
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
   <!-- Uncomment below i you want to use a preloader -->
