--- a/DonationI.html
+++ b/DonationI.html
@@ -107,6 +107,17 @@
 			document.getElementById("myform").style.display="none";
 		}
 		
+	function displayForm()
+		{
+			document.getElementById("myform").style.display="block";
+			document.getElementById("firstForm").style.displau="none";
+		}
+		
+	function sendDatabase()
+		{
+			return false;
+		}
+		
 	function sendEmail() 
 	{
 		Email.send({
@@ -130,7 +141,13 @@
 		);
 	}
 	</script>
-          <form action="" id="myform" name="myform" method="post" role="form" class="contactForm">
+	<form name="firstForm">
+		<div>
+			This is a test to see if this page works and it takes me to another page.
+		</div>
+	<div class="text-center"><button type="submit" onclick="displayForm(); return false">Display Form</button></div>
+	</form>
+          <form action="" id="myform" name="myform" method="post" role="form" class="contactForm" style="display: none;">
             <div class="form-row">
               <div class="form-group col-md-6">
                 <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name" data-rule="minlen:2" data-msg="Please enter a first name" />
