--- a/DonationI.html
+++ b/DonationI.html
@@ -110,7 +110,7 @@
 	function displayForm()
 		{
 			document.getElementById("myform").style.display="block";
-			document.getElementById("firstForm").style.displau="none";
+			document.getElementById("firstForm").style.display="none";
 		}
 		
 	function sendDatabase()
