--- a/DonationI.html
+++ b/DonationI.html
@@ -142,7 +142,7 @@
 	}
 	</script>
 	
-	<div name="firstScreen" id="firstScreen">
+	<div class="form-group col-md-6" name="firstScreen" id="firstScreen">
 		<p>
 		Hello! This is the NVFS In-Kind Donation page. If you are trying to make a donation that is small or you would like
 		like to drop it off, please contact NVFS through email or call-in, or even come by to our thrift shop and drop it 
