--- a/DonationI.html
+++ b/DonationI.html
@@ -142,14 +142,14 @@
 	}
 	</script>
 	
-	<div class="form-group col-md-6" name="firstScreen" id="firstScreen">
+	<div name="firstScreen" id="firstScreen">
 		<p>
 		Hello! This is the NVFS In-Kind Donation page. If you are trying to make a donation that is small or you would like
 		like to drop it off, please contact NVFS through email or call-in, or even come by to our thrift shop and drop it 
 		off there. However, if you have a large donation you would like to donate or you are considering on doing a 
 		fundraiser please select the large donation/fundraiser button to display the form to fill out.
 		</p>
-		<button type="button" onclick="displayForm();">Display Form</button>
+		<button type="button" style="justify-content: center;" onclick="displayForm();">Display Form</button>
 	</div>
 
           <form action="" id="myform" name="myform" method="post" role="form" class="contactForm" style="display: none;">
