--- a/DonationI.html
+++ b/DonationI.html
@@ -88,9 +88,6 @@
 
         <header class="section-header">
           <h3>In-Kind Donations</h3>
-          <p>Please fill in the fields below in order for us to process your donation. If successful, an email will be sent to NVFS
-	     and you will get a confirmation alert on your screen.
-	  </p>
         </header>
 
 <div class="form">
@@ -147,9 +144,28 @@
 		Hello! This is the NVFS In-Kind Donation page. If you are trying to make a donation that is small or you would like
 		like to drop it off, please contact NVFS through email or call-in, or even come by to our thrift shop and drop it 
 		off there. However, if you have a large donation you would like to donate or you are considering on doing a 
-		fundraiser please click the Large Donation button to display the form to fill out.
+		fundraiser please click the Donation Form button to display the form to fill out. <br>
+		Priority Items:
+		<ul>
+			<li>Food</li>
+			<li>Clothing</li>
+			<li>Household Items</li>
+			<li>Toiletries</li>
+			<li>Books</li>
+			<li>Toys</li>
+			<li>Transportation</li>
+			<li>Art & Classroom Supplies</li>
+			<li>Electronics</li>
+			<li>Sports Equipment</li>
+			<li>Other</li>
+				
+		</ul>
+		<br>
+		Contact NVFS Donation Help C'Asha Faltz: <br>
+		Email: <a href="mailto: cfaltz@nvfs.org">cfaltz@nvfs.org</a> <br>
+		Phone Number: <a href="tel:5717482621">571.748.2621</a>
 		</p>
-		<button type="button" style="display: flex; justify-content: center;" onclick="displayForm();">Large Donation</button>
+		<button type="button" onclick="displayForm();">Donation Form</button>
 	</div>
 
           <form action="" id="myform" name="myform" method="post" role="form" class="contactForm" style="display: none;">
@@ -198,20 +214,26 @@
 			<div class="form-group col-md-6">
 			<label>Donation Type: </label>
              <select id = "donationType">
-               <option value = "Clothing">Clothing</option>
                <option value = "Food">Food</option>
-               <option value = "Furniture">Furniture</option>
-               <option value = "Toys">Toys</option>
+               <option value = "Clothing">Clothing</option>
+               <option value = "Household Items">Household Items</option>
+               <option value = "Toiletries">Toiletries</option>
+	       <option value = "Books">Books</option>
+	       <option value = "Toys">Toys</option>
+	       <option value = "Transportation">Transportation</option>
+	       <option value = "Art & Classroom Supplies">Art & Classroom Supplies</option>
+	       <option value = "Electronics">Electronics/option>
+	       <option value = "Sports Equipment">Sports Equipment</option>
 	       <option value = "Other">Other</option>
              </select>
 			</div>
-			<div class="form-group col-md-6">
-			<label>How do you want to donate it? : </label>
-             <select id = "locationChoice">
-               <option value = "Drop Off">Drop Off</option>
-               <option value = "Pick Up">Pick Up</option>
-			   </select>
-			</div>
+	     <div class="form-group col-md-6">
+	     	<label>How do you want to donate it? : </label>
+                <select id = "locationChoice">
+               		<option value = "Drop Off">Drop Off</option>
+               		<option value = "Pick Up">Pick Up</option>
+		</select>
+	     </div>
             <div class="form-group">
               <textarea class="form-control" name="message" id="description" rows="5" data-rule="required" data-msg="" placeholder="Description"></textarea>
               <div class="validation"></div>
