--- a/DonationI.html
+++ b/DonationI.html
@@ -161,7 +161,8 @@
 				
 		</ul>
 		<br>
-		Contact NVFS Donation Help C'Asha Faltz: <br>
+		Contact NVFS Donation Help <br>
+		C'Asha Faltz <br>
 		Email: <a href="mailto: cfaltz@nvfs.org">cfaltz@nvfs.org</a> <br>
 		Phone Number: <a href="tel:5717482621">571.748.2621</a>
 		</p>
