--- a/DonationI.html
+++ b/DonationI.html
@@ -169,46 +169,84 @@
 		<button type="button" onclick="displayForm();">Donation Form</button>
 	</div>
 
-          <form action="" id="myform" name="myform" method="post" role="form" class="contactForm" style="display: none;">
+          <script type="text/javascript">
+        $(document).ready(function() {
+            $("#insert").click(function() {
+                var FirstName = $("#FirstName").val();
+                var LastName = $("#LastName").val();
+                var CompanyName = $("#CompanyName").val();
+				var Country = $("#Country").val();
+				var Street = $("#Street").val();
+				var City = $("#City").val();
+				var ZipCode = $("#ZipCode").val();
+				var Phone = $("#Phone").val();
+				var Email = $("#Email").val();
+                var dataString = "FirstName=" + FirstName + "&LastName=" + LastName + "&CompanyName=" + CompanyName +"&Country=" + Country +"&Street=" + Street +"&City=" + City + "&ZipCode=" + ZipCode +"&Phone=" + Phone +"&Email=" + Email + "&insert=";
+                
+				if ($.trim(FirstName).length > 0 & $.trim(LastName).length > 0 & $.trim(CompanyName).length > 0 & $.trim(Country).length > 0 & $.trim(Street).length > 0 & $.trim(City).length > 0 & $.trim(ZipCode).length > 0 & $.trim(Phone).length > 0 & $.trim(Email).length > 0) {
+                    $.ajax({
+                        type: "POST",
+                        url: "https://nvfsserver.azurewebsites.net/donateSQL.php",
+                        data: dataString,
+                        crossDomain: true,
+                        cache: false,
+                        beforeSend: function() {
+                            $("#insert").val('Connecting...');
+                        },
+                        success: function(data) {
+                            if (data == "success") {
+                                alert("inserted");
+                                $("#insert").val('submit');
+                            } else if (data == "error") {
+                                alert("error");
+                            }
+                        }
+                    });
+                }
+                return false;
+            });
+        });
+    </script>
+          <form action="" id="myform" name="myform" method="post" role="form" class="contactForm">
             <div class="form-row">
               <div class="form-group col-md-6">
-                <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name" data-rule="minlen:2" data-msg="Please enter a first name" />
+                <input type="text" name="FirstName" class="form-control" id="FirstName" placeholder="First Name" data-rule="minlen:2" data-msg="Please enter a first name" />
                 <div class="validation"></div>
               </div>
 			  <div class="form-group col-md-6">
-                <input type="text" name="lname" class="form-control" id="lname" placeholder="Last Name" data-rule="minlen:2" data-msg="Please enter a last name" />
+                <input type="text" name="LastName" class="form-control" id="LastName" placeholder="Last Name" data-rule="minlen:2" data-msg="Please enter a last name" />
                 <div class="validation"></div>
               </div>
 			  <div class="form-group col-md-6">
-                <input type="text" name="compName" class="form-control" id="compName" placeholder="Company Name (optional)" data-rule="minlen:2" data-msg="Please enter a company name" />
+                <input type="text" name="CompanyName" class="form-control" id="CompanyName" placeholder="Company Name (optional)" data-rule="minlen:2" data-msg="Please enter a company name" />
                 <div class="validation"></div>
               </div>
 			  <div class="form-group col-md-6">
-                <input type="text" name="country" class="form-control" id="country" placeholder="Country" data-rule="minlen:2" data-msg="Please enter a country" />
+                <input type="text" name="Country" class="form-control" id="Country" placeholder="Country" data-rule="minlen:2" data-msg="Please enter a country" />
                 <div class="validation"></div>
               </div>
 			  <div class="form-group col-md-6">
-                <input type="text" name="address" class="form-control" id="address" placeholder="Street address" data-rule="minlen:4" data-msg="Please enter a valid street adsdress" />
+                <input type="text" name="Street" class="form-control" id="Street" placeholder="Street address" data-rule="minlen:4" data-msg="Please enter a valid street adsdress" />
                 <div class="validation"></div>
               </div>
 			  <div class="form-group col-md-6">
-                <input type="text" name="city" class="form-control" id="city" placeholder="City" data-rule="minlen:2" data-msg="Please enter a valid city" />
+                <input type="text" name="City" class="form-control" id="City" placeholder="City" data-rule="minlen:2" data-msg="Please enter a valid city" />
                 <div class="validation"></div>
               </div>
 			  <div class="form-group col-md-6">
-                <input type="text" name="state" class="form-control" id="state" placeholder="State" data-rule="minlen:2" data-msg="Please enter a valid state" />
+                <input type="text" name="State" class="form-control" id="State" placeholder="State" data-rule="minlen:2" data-msg="Please enter a valid state" />
                 <div class="validation"></div>
               </div>
 			  <div class="form-group col-md-6">
-                <input type="text" name="zipcode" class="form-control" id="zipcode" placeholder="Zip Code" data-rule="minlen:5" data-msg="Please enter a valid zip code" />
+                <input type="text" name="ZipCode" class="form-control" id="ZipCode" placeholder="Zip Code" data-rule="minlen:5" data-msg="Please enter a valid zip code" />
                 <div class="validation"></div>
               </div>
 			  <div class="form-group col-md-6">
-                <input type="text" name="phone" class="form-control" id="phone" placeholder="Phone (ex): 0123456789" data-rule="minlen:10" data-msg="Please enter a valid phone number" />
+                <input type="text" name="Phone" class="form-control" id="Phone" placeholder="Phone (ex): 0123456789" data-rule="minlen:10" data-msg="Please enter a valid phone number" />
                 <div class="validation"></div>
               </div>
               <div class="form-group col-md-6">
-                <input type="email" class="form-control" name="email" id="email" placeholder="Email" data-rule="email" data-msg="Please enter a valid email" />
+                <input type="email" class="form-control" name="Email" id="Email" placeholder="Email" data-rule="email" data-msg="Please enter a valid email" />
                 <div class="validation"></div>
               </div>
             </div>
@@ -228,18 +266,18 @@
 	       <option value = "Other">Other</option>
              </select>
 			</div>
-	     <div class="form-group col-md-6">
-	     	<label>How do you want to donate it? : </label>
-                <select id = "locationChoice">
-               		<option value = "Drop Off">Drop Off</option>
-               		<option value = "Pick Up">Pick Up</option>
-		</select>
-	     </div>
+			<div class="form-group col-md-6">
+			<label>How do you want to donate it? : </label>
+             <select id = "locationChoice">
+               <option value = "Drop Off">Drop Off</option>
+               <option value = "Pick Up">Pick Up</option>
+			   </select>
+			</div>
             <div class="form-group">
               <textarea class="form-control" name="message" id="description" rows="5" data-rule="required" data-msg="" placeholder="Description"></textarea>
               <div class="validation"></div>
             </div>
-            <div class="text-center"><button type="submit" onclick="check(); return false">Submit</button></div>
+            <div class="text-center"><button type="submit" id="insert" onclick="sendEmail(); check(); return false">Submit</button></div>
           </form>
 	
 	    <div><p id="finish"></p></div>  
