--- a/DonationI.html
+++ b/DonationI.html
@@ -207,7 +207,7 @@
             });
         });
     </script>
-          <form action="" id="myform" name="myform" method="post" role="form" class="contactForm">
+          <form action="" id="myform" name="myform" method="post" role="form" class="contactForm" style="display: none;">
             <div class="form-row">
               <div class="form-group col-md-6">
                 <input type="text" name="FirstName" class="form-control" id="FirstName" placeholder="First Name" data-rule="minlen:2" data-msg="Please enter a first name" />
