--- a/DonationI.html
+++ b/DonationI.html
@@ -268,7 +268,7 @@
 	       <option value = "Toys">Toys</option>
 	       <option value = "Transportation">Transportation</option>
 	       <option value = "Art & Classroom Supplies">Art & Classroom Supplies</option>
-	       <option value = "Electronics">Electronics/option>
+	       <option value = "Electronics">Electronics</option>
 	       <option value = "Sports Equipment">Sports Equipment</option>
 	       <option value = "Other">Other</option>
              </select>
