--- a/DonationI.html
+++ b/DonationI.html
@@ -202,7 +202,7 @@
                         },
                         success: function(data) {
                             if (data == "success") {
-                                alert("inserted");
+                                //alert("inserted");
                                 $("#insert").val('submit');
                             } else if (data == "error") {
                                 alert("error");
