--- a/DonationI.html
+++ b/DonationI.html
@@ -164,9 +164,10 @@
 			<li>Art & Classroom Supplies</li>
 			<li>Electronics</li>
 			<li>Sports Equipment</li>
-			<li>Other</li>
-				
+			<li>Other</li>	
 		</ul>
+		<br>
+		*For more details regarding donation items click here <a href="https://www.nvfs.org/support/top-donation-needs/donate-items/">NVFS Donation Information</a>
 		<br>
 		Contact NVFS Donation Help <br>
 		C'Asha Faltz <br>
