--- a/DonationI.html
+++ b/DonationI.html
@@ -291,7 +291,7 @@
               <textarea class="form-control" name="message" id="description" rows="5" data-rule="required" data-msg="" placeholder="Description"></textarea>
               <div class="validation"></div>
             </div>
-            <div class="text-center"><button type="submit" id="insert" onclick="check(); topFunction(); return false">Submit</button></div>
+            <div class="text-center"><button type="submit" id="insert" onclick="topFunction(); check(); return false">Submit</button></div>
           </form>
 	
 	    <div><p id="finish"></p></div>  
