--- a/DonationI.html
+++ b/DonationI.html
@@ -170,7 +170,10 @@
 			<li>Other</li>	
 		</ul>
 		<br>
-		*For more details regarding donation items click here <a href="https://www.nvfs.org/support/top-donation-needs/donate-items/">NVFS Donation Information</a>
+		*For more details regarding donation items click here: 
+		<br> 
+		<a href="https://www.nvfs.org/support/top-donation-needs/donate-items/">NVFS Donation Information</a>
+		<br>
 		<br>
 		Contact NVFS Donation Help <br>
 		C'Asha Faltz <br>
