--- a/DonationI.html
+++ b/DonationI.html
@@ -154,20 +154,24 @@
 		Hello! This is the NVFS In-Kind Donation page. If you are trying to make a donation that is small or you would like
 		like to drop it off, please contact NVFS through email or call-in, or even come by to our thrift shop and drop it 
 		off there. However, if you have a large donation you would like to donate or you are considering on doing a 
-		fundraiser please click the Donation Form button to display the form to fill out. <br>
-		Priority Items:
+		fundraiser please click the Donation Form button to display the form to fill out. <br> <br>
 		<ul>
-			<li>Food</li>
-			<li>Clothing</li>
-			<li>Household Items</li>
-			<li>Toiletries</li>
-			<li>Books</li>
-			<li>Toys</li>
-			<li>Transportation</li>
-			<li>Art & Classroom Supplies</li>
-			<li>Electronics</li>
-			<li>Sports Equipment</li>
-			<li>Other</li>	
+			<li>
+				Priority Items:
+				<ul>
+					<li>Food</li>
+					<li>Clothing</li>
+					<li>Household Items</li>
+					<li>Toiletries</li>
+					<li>Books</li>
+					<li>Toys</li>
+					<li>Transportation</li>
+					<li>Art & Classroom Supplies</li>
+					<li>Electronics</li>
+					<li>Sports Equipment</li>
+					<li>Other</li>	
+				</ul>
+			</li>
 		</ul>
 		<br>
 		*For more details regarding donation items click here: 
