--- a/DonationI.html
+++ b/DonationI.html
@@ -154,7 +154,7 @@
 		Hello! This is the NVFS In-Kind Donation page. If you are trying to make a donation that is small or you would like
 		like to drop it off, please contact NVFS through email or call-in, or even come by to our thrift shop and drop it 
 		off there. However, if you have a large donation you would like to donate or you are considering on doing a 
-		fundraiser please click the Donation Form button to display the form to fill out. <br> <br>
+		fundraiser please click the Donation Form button to display the form to fill out.
 		<ul>
 			<li>
 				Priority Items:
@@ -176,7 +176,7 @@
 		<br>
 		*For more details regarding donation items click here: 
 		<br> 
-		<a href="https://www.nvfs.org/support/top-donation-needs/donate-items/">NVFS Donation Information</a>
+		<a href="https://www.nvfs.org/support/top-donation-needs/donate-items/"> NVFS Donation Information</a>
 		<br>
 		<br>
 		Contact NVFS Donation Help <br>
