--- a/DonationI.html
+++ b/DonationI.html
@@ -125,7 +125,7 @@
 		}
 		
 		
-	function sendEmail() 
+	/*function sendEmail() 
 	{
 		Email.send({
 		Host: "smtp.gmail.com",
@@ -146,7 +146,7 @@
 		}).then(
 			message => alert("mail sent successfully")
 		);
-	}
+	}*/
 	</script>
 	
 	<div name="firstScreen" id="firstScreen">
