--- a/DonationI.html
+++ b/DonationI.html
@@ -137,7 +137,7 @@
 	function displayForm()
 		{
 			document.getElementById("firstScreen").style.display="none";
-			document.getElementById("dropdown").style.display="block";
+			document.getElementById("dropdownDiv").style.display="block";
 		}
 			
 	/*function sendEmail() 
@@ -202,7 +202,7 @@
 		<button type="button" onclick="displayForm();">Donation Form</button>
 	</div>
 
-	      <div name="dropdown" style="display: none;">
+	      <div name="dropdownDiv" style="display: none;">
 		Thank you for donating a large amount! There are two options for donating. You can Drop Off your donation or you can
 		have it Picked Up. Please select which way you will be donating.
 		      <select name="dropdown" size=1>
