--- a/DonationI.html
+++ b/DonationI.html
@@ -249,39 +249,39 @@
     </script>
           <form action="" id="myform" name="myform" method="post" role="form" class="contactForm" style="display: none;">
             <div class="form-row">
-              <div class="form-group col-md-6" name="firstN">
+              <div class="form-group col-md-6" name="firstN" id="firstN">
                 <input type="text" name="FirstName" class="form-control" id="FirstName" placeholder="First Name" data-rule="minlen:2" data-msg="Please enter a first name" />
                 <div class="validation"></div>
               </div>
-			  <div class="form-group col-md-6" name="lastN">
+			  <div class="form-group col-md-6" name="lastN" id="lastN">
                 <input type="text" name="LastName" class="form-control" id="LastName" placeholder="Last Name" data-rule="minlen:2" data-msg="Please enter a last name" />
                 <div class="validation"></div>
               </div>
-			  <div class="form-group col-md-6" name="cName">
+			  <div class="form-group col-md-6" name="cName" id="cName">
                 <input type="text" name="CompanyName" class="form-control" id="CompanyName" placeholder="Company Name (optional)" data-rule="minlen:2" data-msg="Please enter a company name" />
                 <div class="validation"></div>
               </div>
-			  <div class="form-group col-md-6" name="stree">
+			  <div class="form-group col-md-6" name="stree" id="stree">
                 <input type="text" name="Street" class="form-control" id="Street" placeholder="Street address" data-rule="minlen:4" data-msg="Please enter a valid street adsdress" />
                 <div class="validation"></div>
               </div>
-			  <div class="form-group col-md-6" name="cit">
+			  <div class="form-group col-md-6" name="cit" id="cit">
                 <input type="text" name="City" class="form-control" id="City" placeholder="City" data-rule="minlen:2" data-msg="Please enter a valid city" />
                 <div class="validation"></div>
               </div>
-			  <div class="form-group col-md-6" name="stat">
+			  <div class="form-group col-md-6" name="stat" id="stat">
                 <input type="text" name="State" class="form-control" id="State" placeholder="State" data-rule="minlen:2" data-msg="Please enter a valid state" />
                 <div class="validation"></div>
               </div>
-			  <div class="form-group col-md-6" name="zip">
+			  <div class="form-group col-md-6" name="zip" id="zip">
                 <input type="text" name="ZipCode" class="form-control" id="ZipCode" placeholder="Zip Code" data-rule="minlen:5" data-msg="Please enter a valid zip code" />
                 <div class="validation"></div>
               </div>
-			  <div class="form-group col-md-6" name="phoneN">
+			  <div class="form-group col-md-6" name="phoneN" id="phoneN">
                 <input type="text" name="Phone" class="form-control" id="Phone" placeholder="Phone (ex): 0123456789" data-rule="minlen:10" data-msg="Please enter a valid phone number" />
                 <div class="validation"></div>
               </div>
-              <div class="form-group col-md-6" name="emai">
+              <div class="form-group col-md-6" name="emai" id="emai">
                 <input type="email" class="form-control" name="Email" id="Email" placeholder="Email" data-rule="email" data-msg="Please enter a valid email" />
                 <div class="validation"></div>
               </div>
