--- a/DonationI.html
+++ b/DonationI.html
@@ -108,6 +108,7 @@
 			document.getElementById("finish").innerHTML = "Thank you so much for your donation! This donation was sent to NVFS and " + 
 				"once it is verified and approved, you will be contacted again to confirm the donation or correct any issues that may exist. Thank you so much for donating!";
 			
+			document.getElementById("dropdownDiv").style.display="none";
 			document.getElementById("myform").style.display="none";
 		}
 		
