--- a/DonationI.html
+++ b/DonationI.html
@@ -179,7 +179,7 @@
 		</p>
 		<button type="button" onclick="displayForm();">Donation Form</button>
 	</div>
-
+	<br>
 	      <div name="dropdownDiv" id="dropdownDiv" style="display: none;">
 		Thank you for donating a large amount! There are two options for donating. You can Drop Off your donation or you can
 		have it Picked Up. Please select which way you will be donating.
@@ -204,6 +204,10 @@
 				else if($(this).val() == "3")
 				{
 					document.getElementById("myform").style.display="block";
+					document.getElementById("stree").style.display="block";
+					document.getElementById("cit").style.display="block";
+					document.getElementById("stat").style.display="block";
+					document.getElementById("zip").style.display="block";
 					document.body.scrollTop = 0;
  		 			document.documentElement.scrollTop = 0;
 				}
