--- a/DonationI.html
+++ b/DonationI.html
@@ -273,11 +273,11 @@
           <form action="" id="myform" name="myform" method="post" role="form" class="contactForm" style="display: none;">
             <div class="form-row">
               <div class="form-group col-md-6" name="firstN" id="firstN">
-                <input type="text" name="FirstName" class="form-control" id="FirstName" placeholder="First Name" data-rule="minlen:2" data-msg="Please enter a first name" />
+                <input type="text" name="FirstName" class="form-control" id="FirstName" placeholder="First Name" data-rule="minlen:2" data-msg="Please enter a first name" required/>
                 <div class="validation"></div>
               </div>
 			  <div class="form-group col-md-6" name="lastN" id="lastN">
-                <input type="text" name="LastName" class="form-control" id="LastName" placeholder="Last Name" data-rule="minlen:2" data-msg="Please enter a last name" />
+                <input type="text" name="LastName" class="form-control" id="LastName" placeholder="Last Name" data-rule="minlen:2" data-msg="Please enter a last name" required/>
                 <div class="validation"></div>
               </div>
 			  <div class="form-group col-md-6" name="cName" id="cName">
@@ -285,27 +285,27 @@
                 <div class="validation"></div>
               </div>
 			  <div class="form-group col-md-6" name="stree" id="stree">
-                <input type="text" name="Street" class="form-control" id="Street" placeholder="Street address" data-rule="minlen:4" data-msg="Please enter a valid street adsdress" />
+                <input type="text" name="Street" class="form-control" id="Street" placeholder="Street address" data-rule="minlen:4" data-msg="Please enter a valid street adsdress" required/>
                 <div class="validation"></div>
               </div>
 			  <div class="form-group col-md-6" name="cit" id="cit">
-                <input type="text" name="City" class="form-control" id="City" placeholder="City" data-rule="minlen:2" data-msg="Please enter a valid city" />
+                <input type="text" name="City" class="form-control" id="City" placeholder="City" data-rule="minlen:2" data-msg="Please enter a valid city" required/>
                 <div class="validation"></div>
               </div>
 			  <div class="form-group col-md-6" name="stat" id="stat">
-                <input type="text" name="State" class="form-control" id="State" placeholder="State" data-rule="minlen:2" data-msg="Please enter a valid state" />
+                <input type="text" name="State" class="form-control" id="State" placeholder="State" data-rule="minlen:2" data-msg="Please enter a valid state" required/>
                 <div class="validation"></div>
               </div>
 			  <div class="form-group col-md-6" name="zip" id="zip">
-                <input type="text" name="ZipCode" class="form-control" id="ZipCode" placeholder="Zip Code" data-rule="minlen:5" data-msg="Please enter a valid zip code" />
+                <input type="text" name="ZipCode" class="form-control" id="ZipCode" placeholder="Zip Code" data-rule="minlen:5" data-msg="Please enter a valid zip code" required/>
                 <div class="validation"></div>
               </div>
 			  <div class="form-group col-md-6" name="phoneN" id="phoneN">
-                <input type="text" name="Phone" class="form-control" id="Phone" placeholder="Phone (ex): 0123456789" data-rule="minlen:10" data-msg="Please enter a valid phone number" />
+                <input type="text" name="Phone" class="form-control" id="Phone" placeholder="Phone (ex): 0123456789" data-rule="minlen:10" data-msg="Please enter a valid phone number" required/>
                 <div class="validation"></div>
               </div>
               <div class="form-group col-md-6" name="emai" id="emai">
-                <input type="email" class="form-control" name="Email" id="Email" placeholder="Email" data-rule="email" data-msg="Please enter a valid email" />
+                <input type="email" class="form-control" name="Email" id="Email" placeholder="Email" data-rule="email" data-msg="Please enter a valid email" required/>
                 <div class="validation"></div>
               </div>
             </div>
