--- a/DonationI.html
+++ b/DonationI.html
@@ -229,7 +229,7 @@
 		    
                 var dataString = "FirstName=" + FirstName + "&LastName=" + LastName + "&CompanyName=" + CompanyName +"&Street=" + Street +"&City=" + City + "&ZipCode=" + ZipCode +"&Phone=" + Phone +"&Email=" + Email + "&insert=";
                 
-				if ($.trim(FirstName).length > 0 & $.trim(LastName).length > 0 & $.trim(Street).length > 0 & $.trim(City).length > 0 & $.trim(ZipCode).length > 0 & $.trim(Phone).length > 0 & $.trim(Email).length > 0) {
+				if ($.trim(FirstName).length > 0 & $.trim(LastName).length > 0 & $.trim(Phone).length > 0 & $.trim(Email).length > 0) {
                     $.ajax({
                         type: "POST",
                         url: "https://nvfsserver.azurewebsites.net/donateSQL.php",
