--- a/DonationI.html
+++ b/DonationI.html
@@ -227,7 +227,8 @@
 		var Phone = $("#Phone").val();
 		var Email = $("#Email").val();
 		var Location = $("#dropdown").val();
-		    
+		
+		//this variable is so that the app can submit the fields to the server
                 var dataString = "FirstName=" + FirstName + "&LastName=" + LastName + "&CompanyName=" + CompanyName +"&Street=" + Street + "&City=" + City + "&ZipCode=" + ZipCode +"&Phone=" + Phone + "&Email=" + Email + "&Location=" + Location + "&insert=";
                 
 				if ($.trim(FirstName).length > 0 & $.trim(LastName).length > 0 & $.trim(Phone).length > 0 & $.trim(Email).length > 0) {
